feat: Add argument options init and generate. Generate file yaml_to_dart.yaml

--- a/yaml/collection.model.yaml
+++ b/yaml/collection.model.yaml
@@ -3,7 +3,7 @@ fields:
   - id: String
   - title: String?
     default: ''
-  - counts: int
+  - counts: int?
     default: 0
   - product: Product
   - isActive: bool?
