fix(Enum): defautl value

--- a/yaml/collection.model.yaml
+++ b/yaml/collection.model.yaml
@@ -9,10 +9,10 @@ fields:
   - isActive: bool?
     default: false
   - products: List<Product>
-  - status: enum?
+  - status: enum
     values: ['active_file', 'inactive_file', 'archived_file', 'deleted_file']
     key: "status_file"
-    default: inactive_file
+    #default: inactive_file
   - createdAt: DateTime
     key: "created_at"
 
