--- a/yaml/product.model.yaml
+++ b/yaml/product.model.yaml
@@ -3,7 +3,7 @@ fields:
   - id: String
   - price: double
   - name: String?
-  - isAvailable: bool
+  - isAvailable: bool?
   - images: List<String>
     default: "['madagascar','paris','newyork']"
   - max: int?
